--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -45,6 +45,7 @@ body, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4 {
     left: 50%;
     margin-left: -30px;
     margin-bottom: 40px;
+    z-index: 5;
 }
 
 .form-control-wrapper .form-control:focus~.floating-label, .form-control-wrapper .form-control:not(.empty)~.floating-label {
